[metadata]
name = pyhts
version = 0.2.0
description = A package for forecasting reconciliation.
long_description_content_type = text/markdown
long_description = file: README.md
author = Bohan Zhang
author_email = bhnzhang@outlook.com
license=BSD-3-Clause
license_file = LICENSE
url = https://github.com/AngelPone/pyhts
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
    pandas
    statsforecast
include_package_data = True

[options.packages.find]
include = pyhts


[options.package_data]
* = data/*.csv